--- a/.github/workflows/export-kpi.yml
+++ b/.github/workflows/export-kpi.yml
@@ -1,5 +1,6 @@
 name: Export KPI Dashboard
 on:
+  workflow_dispatch:       # ← pulsante “Run workflow”
   push:
     paths:
       - 'templates/KPI_Tracker_Master.xlsx'
