--- a/.github/workflows/export-kpi.yml
+++ b/.github/workflows/export-kpi.yml
@@ -18,7 +18,7 @@ jobs:
           python-version: '3.11'
 
       - name: Install deps
-        run: pip install pandas openpyxl markdown
+        run: pip install pandas openpyxl markdown tabulate
 
       - name: Generate markdown dashboard
         run: |
