--- a/.github/workflows/export-kpi.yml
+++ b/.github/workflows/export-kpi.yml
@@ -14,6 +14,9 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+        with:
+          token: ${{ github.token }}
+          persist-credentials: true
 
       - name: Set up Python
         uses: actions/setup-python@v5
