--- a/.github/workflows/export-kpi.yml
+++ b/.github/workflows/export-kpi.yml
@@ -41,10 +41,10 @@ jobs:
         run: |
           git config --global user.name 'github-actions'
           git config --global user.email 'action@github'
+
           git add readme_assets/kpi_dashboard.md
           git commit -m "ci: auto‑update KPI dashboard" || echo "No changes"
-          # ---- nuovo: allinea con main remoto ----
-          git pull --rebase origin "${{ github.ref_name }}"
-          git push origin "${{ github.ref_name }}"
 
-
+          # riallinea e sovrascrivi se necessario
+          git pull --rebase origin ${{ github.ref_name }}
+          git push --force-with-lease origin ${{ github.ref_name }}
